[package]
name = "pipetone"
version = "0.1.0"
authors = ["p4r17y817 <christian.dunn@warwick.ac.uk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
ndarray = "0.15.1"
nalgebra = "0.29.0"
structopt = "0.3.21"
csv = "1.1.6"
rayon = "1.5.1"
